<resources>
    <string name="facebook_app_id">1378112635626343</string>
    <string name="fb_login_protocol_scheme">fb1378112635626343</string>
    <string name="app_name">SosyczApp</string>
    <string name="memy">Memy</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="pasty">Pasty</string>
    <string name="cytaty">Cytaty</string>
    <string name="terminarz">Terminarz</string>
    <string name="mail_hint">email</string>
    <string name="pass_hint">hasło</string>
    <string name="login_btn">Zaloguj</string>
    <string name="no_acc_btn">Nie jesteś jeszcze Sosyczem? Zarejestruj się!</string>
    <string name="register_btn">Zarejestruj</string>
    <string name="back_login_btn">Powrót do ekranu logowania</string>
    <string name="minimum_password">Hasło za krótkie</string>
    <string name="auth_failed">Uwierzytelnianie nieudane</string>
    <string name="rejestracja">W celu utworzenia konta skontaktuj się z administratorem.</string>
</resources>
