<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sypcio.sosyczapp.Menu">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/memy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/memy"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/pasty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pasty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pasty"
        app:layout_constraintBottom_toTopOf="@id/kalkulator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memy" />

    <Button
        android:id="@+id/kalkulator"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator"
        app:layout_constraintBottom_toTopOf="@id/cytaty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pasty" />

    <Button
        android:id="@+id/cytaty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cytaty"
        app:layout_constraintBottom_toTopOf="@id/terminarz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kalkulator" />

    <Button
        android:id="@+id/terminarz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/terminarz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cytaty" />

</android.support.constraint.ConstraintLayout>
