<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">



    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/mail_hint" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass_hint"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:text="@string/login_btn"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/not_rgst_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_marginBottom="50dp"
        android:background="@color/cardview_light_background"
        android:text="@string/no_acc_btn"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        android:textSize="12dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        />

</RelativeLayout>
